--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,12 @@
         <version>3.48.0</version>
     </parent>
 
+    <properties>
+
+        <ecos.webapp-lib.version>1.1.1</ecos.webapp-lib.version>
+
+    </properties>
+
     <dependencies>
 
         <dependency>
