--- a/src/main/resources/eapps/artifacts/model/type/ecos-patch.yml
+++ b/src/main/resources/eapps/artifacts/model/type/ecos-patch.yml
@@ -15,6 +15,8 @@ model:
       type: BOOLEAN
     - id: dependsOn
       multiple: true
+    - id: dependsOnApps
+      multiple: true
     - id: type
     - id: config
       type: JSON
